# FortgeschritteneComputergrafik

./: .gitattributes  .gitignore  README.md
A minimal Ray Tracer/: minray
ACG-Assignment1/ACG-Assignment1/: Radiosity.cpp
ACG-Assignment1/ACG-Assignment1.xcodeproj/: project.pbxproj
ACG-Assignment1/Radiosity/: Radiosity.sln
ACG-Assignment1/src/: CMakeLists.txt  Image.hpp  Makefile  README.txt  Radiosity.cpp  Rectangle.hpp  Renderer.hpp  RendererRectangles.h  RendererTriangle.h  Scene.hpp  Triangle.hpp  Vector.hpp  (+2 more)
ACG-Assignment2/: image.ppm
ACG-Assignment3/src/: BoundingBox.hpp  CMakeLists.txt  Camera.hpp  Common.hpp  Geometry.hpp  Image.hpp  KdPhotonMappingRadianceProvider.hpp  LiveImage.h  LiveImage.hpp  Material.hpp  ModelLoader.hpp  NanoFlannKdPMRP.hpp  NanoFlannPhotonMap.h  PathTracingWithPhotonMappingRP.hpp  Ray.hpp  Raycaster.hpp  Raytracer.hpp  Scene.hpp  SimplePhotonMappingRadianceProvider.h  SimplePhotonMappingRadianceProvider.h.orig  SimpleRadianceProvider.hpp  Sphere.hpp  TriangleMesh.hpp  kdtree.c  main.cpp  main.cpp.orig
Examples_Mitsuba/: Exp1_Sphere.xml  Exp2_Teapot.xml  Exp3_Material.xml  Exp4_Glass.xml  Exp5_Settings.xml  Exp6_Scene.xml  Exp7_CornellBox.xml  MitsubaPaths.source  fishbowl.xml
Präsentation/: Project-Final-Report.odt  final_export.xcf  final_export2.xcf  kd-table.dbdoc  kd-tree.graphml  presentation.key  presentation.pptx  presentation_flo.pptx
Radiosity/: Makefile  Radiosity  Radiosity.cpp  image_patches.ppm  image_smooth.ppm
Report/: Project-Final-Report.docx  Project-Final-Report.odt
raytracer/: raytracer
(+55 files in other folders)
